--- a/index.css
+++ b/index.css
@@ -1,28 +1,44 @@
-body{
+html, body{
+   padding:0;
+   margin:0;
     background-color: whitesmoke;
     position: absolute;
 }
 
-nav {
-    display: flex;
-    justify-content: flex-end;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: white;
-    color: white;
-    z-index: 10;
+html {
+	display: block;
+	font-family: Roboto, Arial, sans-serif;
+	font-size: 15px;
+	box-sizing: border-box;
+}
+body {
+	background-color: #f9f9f9;
+	overflow-y: scroll;
 }
 
-.menu_logo{
-    padding: 10px;
+.flex-container{
+    display:flex;
+    flex-direction:column;
+flex-flow:column wrap;
+font-size:12px;
+
+}
+#flex-container{
+    display:flex;
+    height:200px;
+    justify-content: center;
+
 }
 
-.youtube_logo{
-    padding: 10px;
-
+.info_box{
+    width: 560px;
+    border:1px solid grey;
+  padding: 10px;
+  margin: 10px;
+  height:120px;
 }
 
-#searc_bar{
-    float: right;
+#authors_text{
+    font-size:12px;
 }
+
