--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ html, body{
    padding:0;
    margin:0;
     background-color: whitesmoke;
-    position: absolute;
+    position: relative;
 }
 
 html {
@@ -15,20 +15,28 @@ body {
 	background-color: #f9f9f9;
 	overflow-y: scroll;
 }
+nav {
+    display: flex;
+    justify-content: flex-end;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background:whitesmoke;
+    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
+    z-index: 10;
 
-.flex-container{
+/* .flex-container{
     display:flex;
-    flex-direction:column;
-flex-flow:column wrap;
-font-size:12px;
-
+    flex-wrap: wrap;
 }
+
 #flex-container{
     display:flex;
     height:200px;
     justify-content: center;
 
-}
+} */
 
 .info_box{
     width: 560px;
@@ -42,3 +50,12 @@ font-size:12px;
     font-size:12px;
 }
 
+.video_player {
+    position: relative;
+
+}
+
+#description{
+    position: relative;
+    float:right;
+}
