--- a/index.css
+++ b/index.css
@@ -1,61 +1,29 @@
-html, body{
-   padding:0;
-   margin:0;
-    background-color: whitesmoke;
-    position: relative;
-}
-
-html {
-	display: block;
-	font-family: Roboto, Arial, sans-serif;
-	font-size: 15px;
-	box-sizing: border-box;
-}
-body {
-	background-color: #f9f9f9;
-	overflow-y: scroll;
-}
-nav {
-    display: flex;
-    justify-content: flex-end;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background:whitesmoke;
-    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
-    z-index: 10;
-
-/* .flex-container{
-    display:flex;
-    flex-wrap: wrap;
-}
-
-#flex-container{
-    display:flex;
-    height:200px;
-    justify-content: center;
-
-} */
-
-.info_box{
-    width: 560px;
-    border:1px solid grey;
-  padding: 10px;
-  margin: 10px;
-  height:120px;
-}
-
-#authors_text{
-    font-size:12px;
-}
-
-.video_player {
-    position: relative;
+.search_bar{
+float:left;
 
 }
+#search_bar_length{
+    padding-right:250px;
+}
 
-#description{
-    position: relative;
+.left-side-links{
+float:left;
+}
+
+.right-nav-links{
     float:right;
+}
+section{
+  
+float:left;
+margin: 0 1.5%;
+width: 63%;
+}
+aside{
+    float:right;
+    margin: 0 1.5%;
+    width: 30%;
+}
+footer{
+    clear:both;
 }
