--- a/index.css
+++ b/index.css
@@ -1,33 +1,57 @@
-*{
-    margin:0;
-    padding: 0;
+
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+    vertical-align: baseline;
     box-sizing: border-box;
 }
-
-html, body {
-    background-color: whitesmoke;
-height:100%;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
-
-
-.search_bar{
-display:flex;
-justify-content: center;
-height:40px;
+body {
+	line-height: 1;
 }
-
-#search_bar_length{
-    padding-right:2px 8px;
-    width:575px;
+ol, ul {
+	list-style: none;
 }
-
-#search_button{
-width:40px;
+blockquote, q {
+	quotes: none;
 }
-
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
 nav{
-    display: grid;
+    display: inline-flex;
     grid: 56px 1fr / 100px 1fr repeat(3,56px);
     width: 100%;
     grid-gap: 10px;
@@ -35,7 +59,32 @@ nav{
     padding: 0 10px;
 }
 
-.interaction_buttons_left{
+.left-side-links{
+  float:left;
+  margin-right:40px;
+  }
+  
+  .right-nav-links{
+      float:right;
+      margin-left:190px;
+      padding-left:10px;
+  }
+
+.search_bar{
+  display:flex;
+  justify-content: center;
+  height:40px;
+  }
+  
+  #search_bar_length{
+      padding-right:2px 8px;
+      width:575px;
+  }
+  
+  #search_button{
+  width:40px;
+  }
+  .interaction_buttons_left{
     border-radius: 100%;
     justify-self: end;
     height: 100%;
@@ -48,86 +97,89 @@ nav{
     width: 100%;
 }
 
-/*main section*/
+  /*main section*/
 section{
-    display: grid;
-    grid: 
-    'video video' max-content 
-    'sidebar sidebar' max-content
-    / 5fr 3fr;
+  display: grid;
+  grid: 
+  'video video' max-content 
+  'sidebar sidebar' max-content
+  / 5fr 3fr;
 }
 
 /*video */
 .main-video{
-    grid-area: video;
-    padding: 20px;
-    padding-left: 50px;
+  grid-area: video;
+  padding: 20px;
+  padding-left: 50px;
 }
 
 .info_box > p{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    align-items: center;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  align-items: center;
 }
 
 .info_box > div{
-    display: grid;
-    grid: 1fr/repeat(5,60px);
-    justify-content: end;
-    column-gap: 5px;
-    height: 100%;
-    width: 100%;
+  display: grid;
+  grid: 1fr/repeat(5,60px);
+  justify-content: end;
+  column-gap: 5px;
+  height: 100%;
+  width: 100%;
 }
 
 #description_text{
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    align-items: center;
-    column-gap: 5px;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  align-items: center;
+  column-gap: 5px;
 
 }
-
 
 
 /*recommended videos*/
 
 aside{
-    grid-area: sidebar;
-    display: grid;
-    row-gap: 5px;
-    padding: 20px;
-    justify-content: start;
-    float:right;
+  grid-area: sidebar;
+  display: grid;
+  row-gap: 5px;
+  padding: 20px;
+  justify-content: start;
+  float:right;
 }
 
 
-
-
-
-/*
-.left-side-links{
-float:left;
-}
-
-.right-nav-links{
-    float:right;
-}
-section{
-  
-float:left;
-margin: 0 1.5%;
-width: 63%;
-}
-aside{
-    position: relative;
-    float:right;
-    margin: 0 1.5%;
-    width: 30%;
-    left: 100px;
-   
-    background-color: white;
-}
-footer{
-    clear:both;
-}*/
+    /*
+    #sign_in {
+        width: 10%;
+      }
+      .sign_in button {
+        height: 70%;
+        background-color: rgb(22, 122, 198);
+        width: 80%;
+      
+        border-radius: 2px;
+        border-width: 1px;
+        border-style: solid;
+        border-color: rgb(22, 122, 198);
+      }
+      #sign_in span {
+        width: 80%;
+        font-size: 100%;
+        color: white;
+        border-width: 0px;
+        border-style: none;
+        margin: 0px;
+        padding: 0px;
+        border-color: white;
+      }
+      #sign_in {
+        font-size: 100%;
+        background-color: transparent;
+        border-width: 0px;
+        border-style: none;
+        margin: 0px;
+        padding: 10px;
+        border-color: white;
+      }*/
