modified more content

--- a/index.css
+++ b/index.css
@@ -8,10 +8,11 @@ body {
   }
 
   main {
+    
     margin: 2% 3%;
+ 
   }
 
-  
   
   form {
     display: flex;
@@ -89,14 +90,14 @@ body {
   .main-video {
     position: relative;
   
-    padding-top: 25px;
+    padding-top: 20px;
     min-width: 560px;
     min-height: 315px;
   }
   
   .video_section {
     padding: 20px 40px;
-    width: 60%;
+    width: 80%;
   }
 
   .title{
@@ -107,19 +108,35 @@ body {
     font-size: 2rem;
   }
 
-  .side-videos {
+  /*.side-videos {
     display: flex;
     flex-flow: column nowrap;
    padding: 0 40px;
   }
-
+*/
   .recommended{
     display: flex;
-    flex-flow: row nowrap;
-    margin-top: 8px;
+   
+
   }
 
   .details {
     margin: 0px;
     margin-left: 8px;
+  }
+
+  .side-videos{
+      grid-area: sidebar;
+      display: grid;
+      
+      justify-content: start;
+      float:right;
+      margin-top:-400px;
+      margin-left: 450px;
+      width: 30%;
+    grid-column-gap: 5px;
+  
+  }
+  footer{
+    clear:both;
   }
