added new html code

--- a/index.css
+++ b/index.css
@@ -108,12 +108,6 @@ body {
     font-size: 2rem;
   }
 
-  /*.side-videos {
-    display: flex;
-    flex-flow: column nowrap;
-   padding: 0 40px;
-  }
-*/
   .recommended{
     display: flex;
    
@@ -138,6 +132,18 @@ body {
     grid-column-gap: 5px;
   
   }
-  footer{
-    clear:both;
-  }
+ .interaction_buttons_left{
+  display: flex;
+  float:left;
+}
+
+ .interaction_buttons_right{
+  display: flex;
+float:right;
+ }
+
+ #authors_text{
+   font-size:12px;
+ }
+
+ 
