--- a/index.css
+++ b/index.css
@@ -1,7 +1,13 @@
 body {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
+    background-color: whitesmoke;
   }
+
+  header {
+    width: 100%;
+    height: auto;
+}
 
   iframe {
     border: 0px;
@@ -13,67 +19,108 @@ body {
  
   }
 
-  
-  form {
+  header {
+    width: 100%;
+    height: auto;
+}
+
+nav {
     display: flex;
-    padding-top: 10px;
-  }
-
-  input[type="text"] {
-    width: 15rem;
-  }
-  
-  ul a i {
-    font-size: 1.6rem;
-  }
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: white;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: grey;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover {
-    background-color: grey;
-    color: white;
-  }
-  
-  li:nth-child(n + 4) {
-    float: right;
-  }
-  
-  form {
-    margin-left: 40px;
-    height: 100%;
-  }
-
-  nav{
-   
     flex-flow: row wrap;
-    align-items: center;
     justify-content: space-between;
-    padding: 10.5px 20px;
+    align-items: center;
     margin: 0 auto;
+    padding: 10px 20px;
     background-color: white;
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 5;
-  }
+    z-index: 2;
+}
+
+.fa-bars {
+    vertical-align: middle;
+    cursor: pointer;
+    align-content: center;
+    margin-right: 20px;
+    font-size: 2rem;
+}
+
+.nav-logo {
+    width: 100px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+
+}
+
+.nav-left {
+    justify-content: flex-start;
+    
+
+}
+
+input[type="text"] {
+    margin-right: -7px;
+    padding-left: 6px;
+    width: 460px;
+    height: 30px;
+    border-style: none;
+    background-color: transparent;
+    font-size: 1.6rem;
+}
+
+input[type="text"]:focus {
+  outline: none;
+}
+
+.nav_search_button{
+    border-radius: 3px;
+    border: 1px solid lightgray;
+}
+
+.search-button {
+    height: 30px;
+    border-style: none;
+    width: 60px;
+    background-color: lightgray;
+    font-size: 1.6rem;
+    cursor: pointer;
+    outline: none;
+}
+
+.search-button:active {
+  background-color: rgb(194, 194, 194);
+  outline: none;
+  color: rgb(0, 0, 0);
+}
+
+.nav-right {
+    justify-content: flex-end;
+}
+
+.button {
+    margin-right: 27px;
+    cursor: pointer;
+    color: gray;
+    font-size: 1.7rem;
+}
+
+.logo-right {
+    width: 38px;
+    height: auto;
+    border-radius: 100%;
+    cursor: pointer;
+}
   
+
+
+  
+
   #main-video iframe {
     position: absolute;
     top: 0;
@@ -135,15 +182,38 @@ body {
  .interaction_buttons_left{
   display: flex;
   float:left;
+
 }
 
  .interaction_buttons_right{
   display: flex;
-float:right;
+  float:right;
+  text-decoration: none;
+  list-style: none;
+  font-weight: bold;
+  
  }
 
  #authors_text{
    font-size:12px;
  }
 
- 
+ #singers-logo {
+   width: 50px;
+   height: 50px;
+   border-radius: 45px;
+ }
+
+ fas .fa-thumbs-up, .fa-thumbs-down, .fa-share, .fa-folder-plus, .fa-ellipsis-h {
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+.fa-bars {
+  vertical-align: middle;
+  cursor: pointer;
+  align-content: center;
+  margin-right: 20px;
+  font-size: 2rem;
+}
+
