fixed the html and css files

--- a/index.css
+++ b/index.css
@@ -1,219 +1,321 @@
-body {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    background-color: whitesmoke;
-  }
-
-  header {
-    width: 100%;
-    height: auto;
-}
-
-  iframe {
-    border: 0px;
-  }
-
-  main {
-    
-    margin: 2% 3%;
- 
-  }
-
-  header {
-    width: 100%;
-    height: auto;
-}
-
-nav {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-    padding: 10px 20px;
-    background-color: white;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 2;
-}
-
-.fa-bars {
-    vertical-align: middle;
-    cursor: pointer;
-    align-content: center;
-    margin-right: 20px;
-    font-size: 2rem;
-}
-
-.nav-logo {
-    width: 100px;
-    height: 30px;
-    cursor: pointer;
-}
-
-.nav {
-    display: flex;
-    align-items: center;
-
-}
-
-.nav-left {
-    justify-content: flex-start;
-    
-
-}
-
-input[type="text"] {
-    margin-right: -7px;
-    padding-left: 6px;
-    width: 460px;
-    height: 30px;
-    border-style: none;
-    background-color: transparent;
-    font-size: 1.6rem;
-}
-
-input[type="text"]:focus {
-  outline: none;
-}
-
-.nav_search_button{
-    border-radius: 3px;
-    border: 1px solid lightgray;
-}
-
-.search-button {
-    height: 30px;
-    border-style: none;
-    width: 60px;
-    background-color: lightgray;
-    font-size: 1.6rem;
-    cursor: pointer;
-    outline: none;
-}
-
-.search-button:active {
-  background-color: rgb(194, 194, 194);
-  outline: none;
-  color: rgb(0, 0, 0);
-}
-
-.nav-right {
-    justify-content: flex-end;
-}
-
-.button {
-    margin-right: 27px;
-    cursor: pointer;
-    color: gray;
-    font-size: 1.7rem;
-}
-
-.logo-right {
-    width: 38px;
-    height: auto;
-    border-radius: 100%;
-    cursor: pointer;
-}
-  
-
-
-  
-
-  #main-video iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-
-  .flex-container {
-    display: flex;
-    flex-flow: row wrap;
-  }
- 
-  .main-video {
-    position: relative;
-  
-    padding-top: 20px;
-    min-width: 560px;
-    min-height: 315px;
-  }
-  
-  .video_section {
-    padding: 20px 40px;
-    width: 80%;
-  }
-
-  .title{
-    font-size: 1.2rem;
-  }
-
-  #youtube_logo {
-    font-size: 2rem;
-  }
-
-  .recommended{
-    display: flex;
-   
-
-  }
-
-  .details {
-    margin: 0px;
-    margin-left: 8px;
-  }
-
-  .video-section{
-    float:left;
-    margin: 58px 3% 2%; 
-  }
-  .side-videos{
-      grid-area: sidebar;
-      display: grid;
-      justify-content: start;
-      float:right;
-      width: 30%;
-    grid-column-gap: 5px;
-  
-  }
- .interaction_buttons_left{
-  display: flex;
-  float:left;
-
-}
-
- .interaction_buttons_right{
-  display: flex;
-  float:right;
+* {
+  font-family: Roboto;
+  box-sizing: content-box;
+  padding: 0;
   text-decoration: none;
-  list-style: none;
-  font-weight: bold;
-  
- }
-
- #authors_text{
-   font-size:12px;
- }
-
- #singers-logo {
-   width: 50px;
-   height: 50px;
-   border-radius: 45px;
- }
-
- fas .fa-thumbs-up, .fa-thumbs-down, .fa-share, .fa-folder-plus, .fa-ellipsis-h {
-  margin-left: 20px;
-  cursor: pointer;
 }
 
-.fa-bars {
+body {
+  margin: 0;
+}
+/*header styles*/
+header {
+  height: 3.5em;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-image {
+  height: 45%;
+  margin: 0 1em;
+}
+#search-bar{
+  margin-right: -1px;
+  height: 100%;
+  width: 60%;
+  padding-left: 10px;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+}
+
+.search-form {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  height: 50%;
+}
+#search-Button{
+  height: 100%;
+  width: 60px;
+  border: 1px solid lightgray;
+  margin-left: 0px;
+  background-image: url("./src/search.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40%;
+}
+/*main video style*/
+
+main {
+  margin-top: 56px;
+  width: 100%;
+  height: 100%;
+}
+section {
+  position: absolute;
+  width: 65%;
+  padding: 24px 24px 0 24px;
+  background-color: hsl(0, 0%, 98%);
+  float: right;
+  height: 2000px;
+}
+h1 {
+  font-size: 23px;
+  font-weight: 400;
+}
+
+#main-info1 {
+  padding: 20px 0 8px 0;
+  border-bottom: 0.5px solid rgb(186, 186, 186);
+}
+#main-info2 {
+  padding: 10px 0 20px 0;
+  border-bottom: 0.5px solid rgb(186, 186, 186);
+}
+.info-container {
+  height: 41px;
+}
+.video-views {
+  color: #606060;
+  float: left;
+  margin-top: 10px;
+}
+
+.video-date {
+  padding-left: 4px;
+  color: #606060;
+  float: left;
+  margin-top: 10px;
+}
+.video-rates {
+  float: right;
+}
+.subscribe-button {
+  color: #fff;
+  height: 36px;
+  padding: 10px 16px;
+  margin: 0 4px;
+  background-color: #cc0000;
+  float: right;
+}
+.first-row {
+  margin-bottom: 12px;
+  padding-top: 16px;
+}
+.singers-logo {
+  position: absolute;
+  width: 65px;
+  height: 50px;
+}
+.singers-name {
+  cursor: pointer;
+  margin-left: 60px;
+  font-size: 15px;
+  font-weight: 500;
+}
+.subscribers {
+  margin-left: 5px;
+  color: #606060;
+  font-size: 13px;
+  margin-left: 60px;
+}
+.description {
+  font-size: 15px;
+
+  margin-left: 60px;
+}
+.logo {
+  border-radius: 50%;
+width:60px;
+
+height:50px;
+}
+.description-text {
+  padding: 25px 0;
+}
+.description-toggle {
+  cursor: pointer;
+  color: #606060;
+}
+
+/*comments*/
+
+#main-comment {
+  margin: 24px 0 32px 0;
+}
+.comment-header {
+  height: 32px;
+}
+.comments {
+  margin-right: 35px;
+}
+.sort-button {
   vertical-align: middle;
+  display: inline-block;
   cursor: pointer;
-  align-content: center;
-  margin-right: 20px;
-  font-size: 2rem;
+  margin: 0 10px;
+}
+.bar-top {
+  width: 20px;
+  height: 2px;
+  background-color: rgb(161, 159, 159);
+  margin: 4px 0;
+}
+.bar-mid {
+  width: 12px;
+  height: 2px;
+  background-color: rgb(161, 159, 159);
+  margin: 4px 0;
+}
+.bar-bottom {
+  width: 5px;
+  height: 2px;
+  background-color: rgb(161, 159, 159);
+  margin: 4px 0;
+}
+.sort-text {
+  cursor: pointer;
+}
+.comments-container {
+  margin-top: 24px;
+}
+.user-logo {
+  display: inline-block;
+  height: 48px;
+  width: 5%;
+}
+.user {
+  border-radius: 50%;
+}
+.user-comments {
+  padding-left: 10px;
+}
+.user-comment-input {
+  vertical-align: top;
+  border: 0;
+  border-bottom: 0.5px solid rgb(186, 186, 186);
+  outline: none;
+  width: 92%;
+  text-align: top;
+  background-color: #fafafa;
+  cursor: pointer;
 }
 
+/*the comments itself*/
+.comments-block {
+  margin: 20px 0;
+}
+.commenter-logo-container {
+  position: absolute;
+  display: inline-block;
+  height: 50px;
+  width: 5%;
+}
+.commenter-logo {
+  cursor: pointer;
+  border-radius: 50%;
+}
+.comment-wrapper {
+  padding-left: 60px;
+  display: inline-block;
+}
+.commenter-username {
+  cursor: pointer;
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 15px;
+}
+.comment-date {
+  margin-left: 5px;
+  color: #606060;
+  font-size: 13px;
+}
+.commenter-comment {
+  font-size: 15px;
+}
+.comment-toolbar {
+  margin: 5px 0;
+}
+.thumbs-up {
+  cursor: pointer;
+  width: 16px;
+  height: 16px;
+}
+.thumbs-down {
+  cursor: pointer;
+  width: 16px;
+  height: 16px;
+}
+.score {
+  color: #606060;
+  padding-right: 25px;
+  padding-left: 5px;
+  font-size: 13px;
+  line-height: 10px;
+}
+.reply-button {
+  cursor: pointer;
+  color: #909090;
+  margin-left: 20px;
+}
+
+.sub-comments {
+  cursor: pointer;
+  margin: 5px 0 0 56px;
+}
+.down-arrow {
+  cursor: pointer;
+  margin-left: 4px;
+  font-size: 24px;
+}
+
+
+/*aside*/
+
+aside {
+  position: absolute;
+  right: 0;
+  width: 35%;
+  padding: 24px 24px 0;
+  background-color: hsl(0, 0%, 98%);
+  height: 2000px;
+}
+.upnext-button {
+  vertical-align: center;
+}
+#autoplay-container {
+  margin-bottom: 16px;
+  border-bottom: 0.5px solid rgb(186, 186, 186);
+}
+.autoplay-button {
+  float: right;
+}
+.autoplay-video {
+  margin: 16px 0;
+}
+.metadata {
+  display: inline-block;
+  vertical-align: top;
+  padding-right: 24px;
+  width: 200px;
+  cursor: pointer;
+}
+.autoplay-video-title {
+  font-size: 14px;
+  font-weight: 500;
+}
+.autoplay-video-author {
+  color: #606060;
+  font-size: 13px;
+  padding-top: 4px;
+}
+.autoplay-video-views {
+  color: #606060;
+  font-size: 13px;
+  padding-top: 4px;
+}
+.sidebar-video {
+  margin-bottom: 10px;
+}
