--- a/index.css
+++ b/index.css
@@ -37,14 +37,9 @@ header {
   height: 50%;
 }
 #search-Button{
-  height: 100%;
-  width: 60px;
-  border: 1px solid lightgray;
-  margin-left: 0px;
-  background-image: url("./src/search.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 40%;
+  width: 15px;
+  height: 23px;
+  margin-left: -50px;
 }
 /*main video style*/
 
@@ -55,7 +50,7 @@ main {
 }
 section {
   position: absolute;
-  width: 65%;
+  width: 60%;
   padding: 24px 24px 0 24px;
   background-color: hsl(0, 0%, 98%);
   float: right;
@@ -66,24 +61,27 @@ h1 {
   font-weight: 400;
 }
 
+input {
+  width: 465px;
+}
 #main-info1 {
-  padding: 20px 0 8px 0;
+ 
   border-bottom: 0.5px solid rgb(186, 186, 186);
 }
-#main-info2 {
-  padding: 10px 0 20px 0;
+/* #main-info2 {
+  
   border-bottom: 0.5px solid rgb(186, 186, 186);
-}
-.info-container {
+} */
+/* .info-container {
   height: 41px;
-}
-.video-views {
+} */
+/* .video-views {
   color: #606060;
   float: left;
   margin-top: 10px;
-}
+} */
 
-.video-date {
+/* .video-date {
   padding-left: 4px;
   color: #606060;
   float: left;
@@ -91,15 +89,155 @@ h1 {
 }
 .video-rates {
   float: right;
-}
-.subscribe-button {
+} */
+/* .subscribe-button {
   color: #fff;
   height: 36px;
   padding: 10px 16px;
   margin: 0 4px;
   background-color: #cc0000;
   float: right;
+} */
+.fa-bars {
+  vertical-align: middle;
+  cursor: pointer;
+  align-content: center;
+  margin-right: 20px;
+  font-size: 2rem;
 }
+
+.social-bar{
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: gray;
+  border-bottom: 1px solid lightgray;
+  padding-bottom: 20px;
+  font-size: 1.3rem;
+}
+
+
+
+.likes-dislikes-shares {
+  font-weight: bold;
+}
+
+fas .fa-thumbs-up, .fa-thumbs-down, .fa-share, .fa-folder-plus, .fa-ellipsis-h {
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+button, label, .fa-thumbs-up, .fa-thumbs-down, .fa-share, .fa-folder-plus, .fa-ellipsis-h {    
+  cursor: pointer;
+}
+/*social-bar end*/
+
+/*sentiment-bar start*/    
+.sentiment-bar {
+  width: 123px;
+  background: rgba(90, 90, 90, 0.5);
+  margin-left: -9px;
+  margin-top: 20px;
+  margin-bottom: -21px;
+}
+.inside-bar {
+  width: 71%;
+  height: 3px;
+  background: rgb(59, 59, 59);
+}
+/*sentiment-bar end*/
+
+/*main-content end*/
+
+.channel-section {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row;
+}
+
+.avatar-section {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+}
+
+.channel-avatar-logo {
+  display: block;
+  margin-right: auto;
+}
+
+.channel-name {
+  text-decoration: none;
+  color: black;
+  font-weight: bolder;
+  font-size: 1.4rem;
+}
+
+.fa-check-circle {
+  color: gray;
+  margin-left: 2px;
+  font-size: 1.2rem;
+}
+
+.subscribers {
+  color: rgb(110, 109, 109);
+  font-size: 1.2rem;
+  line-height: 2;
+}
+
+.title-channel {
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+.subscribe-button {
+  background-color: #c00;
+  color: white;
+  font-weight: bold;
+  border-style: none;
+  border-radius: 2px;
+  width: 105px;
+  height: 36px;
+  margin-top: 10px;
+  outline: none;
+}
+
+.subscribe-button:active{
+background-color: rgb(175, 0, 0)
+}
+
+.description-section {
+  margin: 17px 0px 20px 58px;
+}
+
+.description-content {
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 2.1rem;
+}
+
+div .description-section .show-more {
+  margin-top: 8px;
+  font-size: 1.3rem;
+  font-weight: 500;
+  letter-spacing: 0.007px;
+  text-transform: uppercase;
+  border-style: none;
+  background: transparent;
+  padding-left: 0;
+  color: gray;
+  outline: none;
+}
+
+.comments {
+  text-align: center;
+  font-size: 1.4rem;
+  padding-top: 32px;
+  font-weight: 400;
+ }
+/*  
 .first-row {
   margin-bottom: 12px;
   padding-top: 16px;
@@ -120,25 +258,23 @@ h1 {
   color: #606060;
   font-size: 13px;
   margin-left: 60px;
-}
-.description {
+} */
+/* .description {
   font-size: 15px;
-
   margin-left: 60px;
-}
-.logo {
+} */
+/* .logo {
   border-radius: 50%;
 width:60px;
-
 height:50px;
-}
-.description-text {
+} */
+/* .description-text {
   padding: 25px 0;
 }
 .description-toggle {
   cursor: pointer;
   color: #606060;
-}
+} */
 
 /*comments*/
 
