--- a/index.css
+++ b/index.css
@@ -119,7 +119,45 @@ input {
 }
 .video-rates {
   float: right;
+  font-size:12px;
+color:#909090;
+display:inline-flex;
+flex-direction: row;
+
 } 
+.video-rates a{
+  color:#909090;
+}
+.thumbsup{
+  height:25px;
+  width:25px;
+  color:#909090;
+  opacity:0.3;
+}
+.thumbsdown{
+  height:25px;
+  width:25px;
+  opacity: 0.7;
+  color:#909090;
+}
+.share{
+  height:25px;
+  width:25px;
+  opacity: 0.4;
+  color:#909090;
+}
+.save{
+  height:25px;
+  width:30px;
+  opacity: 0.4;
+  color:#909090;
+}
+.more{
+  height:25px;
+  width:25px;
+  color:#909090;
+  opacity: 0.4;
+}
  .subscribe-button {
   font-size: 13px;
   color: #fff;
@@ -239,7 +277,6 @@ height:50px;
   display: inline-block;
   height: 48px;
   width: 5%;
-  margin-bottom:5px;
 }
 .user {
   border-radius: 50%;
